Fix gain title center aligned

--- a/src/screens/Home/styles.module.scss
+++ b/src/screens/Home/styles.module.scss
@@ -53,6 +53,7 @@
       opacity: 0.5;
     }
     h2 {
+      text-align: center;
       font-size: 30px;
       letter-spacing: 0.545455px;
       color: $colorWhite;
